--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "lint": "eslint src/**/*.ts",
     "test": "jest",
     "prebuild": "rimraf dist/*",
     "build": "tsc"
@@ -36,7 +37,12 @@
     "prettier": "^3.4.2",
     "rimraf": "^6.0.1",
     "typescript": "^5.7.3",
-    "xotp": "^1.0.5"
+    "xotp": "^1.0.5",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0"
   },
   "peerDependencies": {
     "@nestjs/common": "^6.6.0 || ^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0",
