--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestjs-xotp",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.1",
   "description": "NestJS XOTP - A powerful one-time password (OTP) library for NestJS.",
   "author": "Farshid Beheshti",
   "license": "MIT",
@@ -30,8 +30,8 @@
   },
   "homepage": "https://github.com/farshidbeheshti/nestjs-xotp#readme",
   "devDependencies": {
-    "@nestjs/common": "^10.4.15",
-    "@nestjs/core": "^10.4.15",
+    "@nestjs/common": "^11.0.0",
+    "@nestjs/core": "^11.0.0",
     "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
@@ -45,8 +45,8 @@
     "eslint-plugin-prettier": "^5.0.0"
   },
   "peerDependencies": {
-    "@nestjs/common": "^6.6.0 || ^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0",
-    "@nestjs/core": "^6.6.0 || ^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0",
+    "@nestjs/common": "^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0 || ^11.0.0",
+    "@nestjs/core": "^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0 || ^11.0.0",
     "xotp": "^1.0.5"
   }
 }
